--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,32 +1,14 @@
+{% extends 'blog/base.html' %}
 {% load staticfiles %}
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Cecep's blog</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-    <link rel="stylesheet"  href="{% static 'css/blog.css' %}">
-</head>
-<body>
-    <div class="page-header">
-        <h1><a href="/">Cecep Blog</a></h1>
-    </div>
-<div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            {% for post in posts %}
-            <div class="post">
-                <div class="date">
-                    <p>Published date: {{ post.published_date }}</p>
-                </div>
-                <h1><a href="">{{ post.title }}</a></h1>
-                <p>{{ post.text|linebreaksbr }}</p>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
-</div>
 
-</body>
-</html>
+{% block content %}
+    {% for post in posts %}
+        <div class="post">
+            <div class="date">
+                <p>Published date: {{ post.published_date }}</p>
+            </div>
+            <h1><a href="">{{ post.title }}</a></h1>
+            <p>{{ post.text|linebreaksbr }}</p>
+        </div>
+    {% endfor %}
+{% endblock %}
