--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,8 +6,12 @@
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date}}
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_edit' pk=post.pk%}" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
+                {% endif %}
             </div>
         {% endif %}
+
         <h1>{{ post.title }}</h1>
         <p>{{ post.text }}</p>
     </div>
