--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,12 +6,11 @@
         {% if post.published_date %}
             <div class="date">
                 {{ post.published_date}}
-                {% if user.is_authenticated %}
-                    <a href="{% url 'post_edit' pk=post.pk%}" class="btn btn-default"><span class="glyphicon glyphicon-pencil"></span></a>
-                {% endif %}
             </div>
         {% endif %}
-
+        {% if user.is_authenticated %}
+            <a href="{% url 'post_edit' pk=post.pk%}" class="btn  btn-default top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+        {% endif %}
         <h1>{{ post.title }}</h1>
         <p>{{ post.text }}</p>
     </div>
