add method delete post

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -13,7 +13,7 @@ body {
     padding: 20px 20px 20px 40px;
 }
 
-.page-header, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
+.page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
     color: #ffffff;
     font-size: 36pt;
     text-decoration: none;
@@ -29,6 +29,7 @@ h1, h2, h3, h4 {
 
 .date {
     color: #828282;
+
 }
 
 .save {
@@ -53,5 +54,6 @@ h1, h2, h3, h4 {
 .post h1 a , .post h1 a:visited {
     color: #000000;
 }
+
 
 
