--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -7,11 +7,15 @@
             <div class="date">
                 {{ post.published_date}}
             </div>
+        {% else %}
+            <a class="btn btn-default" href="{% url 'post_publish' pk=post.pk%}">Publish</a>
         {% endif %}
         {% if user.is_authenticated %}
-            <a href="{% url 'post_edit' pk=post.pk%}" class="btn  btn-default top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+            <a href="{% url 'post_edit' pk=post.pk%}" class="btn  btn-default"><span class="glyphicon glyphicon-edit"></span></a>
+            <a class="btn btn-default" href="{% url 'post_remove' pk=post.pk %}"><span class="glyphicon glyphicon-remove"></span></a>
         {% endif %}
         <h1>{{ post.title }}</h1>
+
         <p>{{ post.text }}</p>
     </div>
 {% endblock %}
